--- a/app/views/marketplace/_marketplace_search_filter.html.erb
+++ b/app/views/marketplace/_marketplace_search_filter.html.erb
@@ -7,7 +7,7 @@
           <p class="left-label">Order by:</p>
         </div>
         <div class="small-6 columns no-padding">
-          <%= select_tag :sort, options_for_select([["Newest", "created_at desc"], ["Low Price", "price asc"], ["High Price", "price desc"]], ), :id => 'sort_listing', :class => 'filter-sort' %>
+          <%= select_tag :sort, options_for_select([["Newest", "created_at desc"], ["Low Price", "price asc"], ["High Price", "price desc"]], ), :id => 'marketplace-sort-listing', :class => 'filter-sort' %>
         </div>
         <div class="medium-1 columns filter-pipe hide-for-small">
           <span>|</span>
@@ -20,7 +20,7 @@
           <p class="hide-for-medium-up mobile-distance-label">Distance:</p>
         </div>
         <div class="small-6 columns no-padding">
-          <%= select_tag :distance_filter, options_for_select([["All", "10000"], ["500 mi", "500"], ["100 mi", "100"], ["50 mi", "50"]], ), :id => 'distance_filter', :class => 'filter-sort' %>
+          <%= select_tag :distance_filter, options_for_select([["All", "10000"], ["500 mi", "500"], ["100 mi", "100"], ["50 mi", "50"]], ), :id => 'marketplace-distance-filter', :class => 'filter-sort' %>
         </div>
         <hr class="hide-for-medium-up hr-distance-mobile" />
       </div>
@@ -28,10 +28,10 @@
       <hr class="show-for-medium-only hr-distance-medium" />
         <div class="row collapse">
           <div id="filter-search" class="small-9 columns">
-            <%= text_field_tag :search, params[:search], :class => "marketplace-search", :placeholder => "Search" %>
+            <%= text_field_tag :search, params[:search], :class => "marketplace-search", :placeholder => "Search", id: "marketplace-search" %>
           </div>
           <div class="small-3 columns">
-            <%= submit_tag "Search", :class => "postfix product-search-button bon-button", id: "search-button" %>
+            <%= submit_tag "Search", :class => "postfix product-search-button bon-button", id: "marketplace-search-button" %>
           </div>
         </div>
       </div>
