Use helper method to set correct path

--- a/app/views/shared/_marketplace_nav.html.erb
+++ b/app/views/shared/_marketplace_nav.html.erb
@@ -1,4 +1,4 @@
-<label class="marketplace-nav-title"><%= link_to_unless_current 'All Listings', marketplace_path %></label>
+<label class="marketplace-nav-title"><%= link_to_unless_current 'All Listings', marketplace_or_listings %></label>
 <hr class="nav-hr" />
 Categories
 <ul>
