--- a/app/assets/javascripts/listings.js.erb
+++ b/app/assets/javascripts/listings.js.erb
@@ -9,7 +9,7 @@ $(function(){
     $(this).removeClass('fi-info-hover');
   });
 
-  function searchFliterSort (){
+  function listingSearchSort (){
     var search = $('.marketplace-search').val();
     var category = $('#listings').data('categoryId');
     var sortValue = $('#sort_listing option:selected').val();
@@ -26,10 +26,10 @@ $(function(){
       },
     });
   }
-  $('#search-button').on('click', searchFliterSort);
+  $('#search-button').on('click', listingSearchSort);
 
-  $('#sort_listing, #distance_filter').on('change', searchFliterSort);
+  $('#sort_listing, #distance_filter').on('change', listingSearchSort);
 
-  $('#search').on('keyup', searchFliterSort);
+  $('#search').on('keyup', listingSearchSort);
 
 });
