--- a/app/views/shared/_pricing_table.html.erb
+++ b/app/views/shared/_pricing_table.html.erb
@@ -10,7 +10,7 @@
   <% unless @listing.is_offer? %>
     <li class="price"><%= number_to_currency(@listing.price) %></li>
   <% end %>
-  <li class="bullet-item"><%= willing_to_ship?(@listing) %></li>
+  <li class="bullet-item"><%= @listing.willing_to_ship? %></li>
   <li class="cta-button"><%= pricing_table_button %></li>
 
   <div id="interestedModal" class="reveal-modal" data-reveal>
