--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -20,7 +20,7 @@
   <div class="small-12 columns">
     <div class="row">
       <div class="small-12 medium-6 large-4 columns">
-        <p><%= link_to "<i class='fi-shopping-cart'></i> Seller's Marketplace".html_safe, :class => "button radius bon-button seller-button" %></p>
+        <p><%= link_to "<i class='fi-shopping-cart'></i> Seller's Marketplace".html_safe, user_marketplace_path(@listing.user), :class => "button radius bon-button seller-button" %></p>
       </div>
 <!--             <div class="small-12 medium-6 columns left">
         <p><%#= link_to "<i class='fi-torso'></i> Seller's Profile".html_safe, profile_path, class: "button radius bon-button seller-button" %></p>
