--- a/app/views/marketplace/_profile_banner.html.erb
+++ b/app/views/marketplace/_profile_banner.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div id="profile-name-column" class="small-7 medium-9 columns no-padding">
     <h4 id="profile-name" class="text-left"><%= @user.full_name %></h4>
-    <% if user_signed_in? %>
+    <% if user_signed_in? && not_current_user(@user) %>
       <div class="row">
         <div class="small-10 medium-5 large-4 columns">
           <a href="#" data-reveal-id="sendMessageModal" class="button radius small bon-button profile-button"><i class="fi-mail"></i> Send Message</a>
@@ -13,7 +13,7 @@
     <% end %>
   </div>
 </div>
-<% if user_signed_in? %>
+<% if user_signed_in? && not_current_user(@user) %>
 <div id="sendMessageModal" class="reveal-modal" data-reveal>
   <%= form_tag send_message_path(@user) do %>
     <h2>Send a message!</h2>
