--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -6,36 +6,30 @@
   </div>
   <!-- Main Feed -->
   <div class="small-12 medium-8 columns">
-  <%= link_to "Add new listing", new_listing_path, class: "button radius expand new-listing-button" %>
+    <%= link_to "Add new listing", new_listing_path, :class => "button radius expand new-listing-button" %>
     <h2>Current Listings</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Title</th>
-          <th>Category</th>
-          <th>Published</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @listings.each do |listing| %>
-          <tr class="listing">
-            <td><%= link_to listing.headline, listing %></td>
-            <td><%= "#{listing.category.name}" %></td>
-            <td><%= listing.published? %></td>
-            <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
-            <td><%= link_to 'Remove', remove_listing_path(listing), method: :patch, data: { confirm: 'Are you sure?' } %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-
+    <hr class="nav-hr" />
+    <% @listings.each do |listing| %>
+    <div class="row">
+      <div class="small-3 medium-2 columns message-pic">
+        <a href="#"><img src="http://placehold.it/50x50&text=[img]" /></a>
+      </div>
+      <div class="small-9 medium-10 columns left no-padding">
+        <div class="row">
+          <div class="small-9 columns">
+            <p class="message-name"><%= link_to truncate(listing.headline, length: 30), listing_path(listing) %></p>
+            <p>Category: <%= listing.category.name %></p>
+            <p>Published: <%= listing.published? %></p>
+          </div>
+          <div class="small-3 columns panel listing-list-panel left">
+            <p class="centered-text"><%= link_to 'Edit', edit_listing_path(listing) %></p>
+            <hr class="nav-hr" />
+            <p class="centered-text"><%= link_to 'Remove', remove_listing_path(listing), method: :patch, data: { confirm: 'Are you sure?' } %></p>
+          </div>
+        </div>
+      </div>
+      <hr />
+    </div>
+    <% end %>
   </div>
-  <!-- Right Sidebar -->
-  <!-- On small devices this column is hidden -->
-  <!-- <aside class="medium-3 columns hide-for-small">
-    <p><img src="http://placehold.it/300x440&text=[ad]" /></p>
-    <p><img src="http://placehold.it/300x440&text=[ad]" /></p>
-  </aside>  -->
 </div>
