--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -18,6 +18,13 @@
           <h4><%= @box_title %></h4>
         </div>
       </div>
+      <% if trash_box? %>
+        <div class="row">
+          <div class="small-5 small-offset-7 large-3 large-offset-9 columns right">
+            <%= link_to "<i class='fi-trash'></i> Empty trash".html_safe, empty_trash_path, method: :post, data: { confirm: "Are you sure you want to empty the trash?", :class => "right" } %>
+          </div>
+        </div>
+      <% end %>
       <div class="row">
         <%= (render partial: 'message', collection: @messages, as: :conversation) || no_messages %>
       </div>
