--- a/app/views/marketplace/index.html.erb
+++ b/app/views/marketplace/index.html.erb
@@ -1,11 +1,10 @@
 <% page_title "Marketplace" %>
 <div id="marketplace" class="row">
-  <!-- Side Bar -->
   <div id="marketplace-nav" class="medium-4 large-3 columns hide-for-small">
     <div class="panel">
       <%= render partial: "shared/marketplace_nav" %>
     </div>
-  </div> <!-- End Side Bar -->
+  </div>
   <div class="small-12 medium-8 large-9 columns">
     <%= render partial: "marketplace_search_filter" %>
     <h1><%= @category %></h1>
