Add line break to price tooltip

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -27,7 +27,7 @@
     <%= f.radio_button(:sale_type, "offer") %>
     <%= f.label "Take offers" %><br />
 
-    <%= f.label :price, :class => "inline-label" %><span data-tooltip aria-haspopup="true" class="has-tip tip-right" title="Enter a price, even if you selected 'Take offers'. We won't display the price for listings you're taking offers on, but we'll use it to help search and sort listings."><i class="fi-info"></i></span>
+    <%= f.label :price, :class => "inline-label" %><span data-tooltip aria-haspopup="true" class="has-tip tip-right" title="Enter a price, even if you selected 'Take offers'.<br /><br />We won't display the price for listings you're taking offers on, but we'll use it to help search and sort listings."><i class="fi-info"></i></span>
     <%= f.text_field :price %>
 
     <%= f.label "Category" %>
