--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -119,6 +119,22 @@
   padding: 5px;
 }
 
+@media only screen and (min-width: 40.063em)  {
+  .seller-info-box {
+    margin-top: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+.seller-button {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 100%;
+  margin-top: 5px;
+  margin-bottom: 0;
+}
+
 #notice {
   color: green;
 }
