--- a/app/views/shared/_pricing_table.html.erb
+++ b/app/views/shared/_pricing_table.html.erb
@@ -1,6 +1,7 @@
 <ul class="pricing-table">
   <li class="title"><%= @listing.headline %></li>
   <li class="description"><%= @listing.description %></li>
+  <li class="bullet-item">Seller: <%= link_to @listing.seller_name, user_marketplace_path(@listing.seller) %></li>
  <!--  <li class="bullet-item">
     <p>Common name: Japanese Black Pine</p>
     <p>Species: <em>Pinus thunbergii</em></p>
@@ -12,23 +13,24 @@
   <% end %>
   <li class="bullet-item"><%= @listing.willing_to_ship? %></li>
   <li class="cta-button"><%= pricing_table_button %></li>
-
-  <div id="interestedModal" class="reveal-modal" data-reveal>
-    <%= form_tag inquiries_path(@listing) do %>
-      <h2>Like it? Let them know your interested!</h2>
-      <div class="row">
-        <div class="small-12 medium-8 large-6 columns">
-          <p class="lead">Add a message</p>
-          <%= label_tag :body, "Message" %>
-          <%= text_area_tag :body, @message_body %>
-          <% if @listing.sale_type == "offer" %>
-            <%= label_tag :offer %>
-            <%= text_field_tag :offer %>
-          <% end %>
+  <% unless current_user_listing? %>
+    <div id="interestedModal" class="reveal-modal" data-reveal>
+      <%= form_tag inquiries_path(@listing) do %>
+        <h2>Like it? Let them know your interested!</h2>
+        <div class="row">
+          <div class="small-12 medium-8 large-6 columns">
+            <p class="lead">Add a message</p>
+            <%= label_tag :body, "Message" %>
+            <%= text_area_tag :body, @message_body %>
+            <% if @listing.sale_type == "offer" %>
+              <%= label_tag :offer %>
+              <%= text_field_tag :offer %>
+            <% end %>
+          </div>
         </div>
-      </div>
-      <a class="close-reveal-modal">&#215;</a>
-      <%= submit_tag "Send", :class => "button tiny listing-close-reveal-modal" %>
-    <% end %>
-  </div>
+        <a class="close-reveal-modal">&#215;</a>
+        <%= submit_tag "Send", :class => "button tiny listing-close-reveal-modal" %>
+      <% end %>
+    </div>
+  <% end %>
 </ul>
