--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,6 +1,6 @@
 <li>
   <%= link_to_unless_current category.name, {
-  controller: controller_name,
+  controller: set_controller_name,
   action: action_name,
   category_id: category.name.downcase } %>
 </li>
