--- a/app/views/offers/_inquiry.html.erb
+++ b/app/views/offers/_inquiry.html.erb
@@ -15,9 +15,9 @@
   </div>
 </div>
 <div class="small-12 medium-9 large-6 columns">
-  <% if inquiry.listing.is_offer? %>
-    <%= link_to "<i class='fi-like'></i> Accept".html_safe, offers_path, :class => "button radius bon-button offers-page-button" %>
-  <% end %>
+  <%# if inquiry.listing.is_offer? %>
+    <%#= link_to "<i class='fi-like'></i> Accept".html_safe, offers_path, :class => "button radius bon-button offers-page-button" %>
+  <%# end %>
   <%= link_to "<i class='fi-mail'></i> Message".html_safe, message_path(inquiry.conversation_id), :class => "button radius bon-button offers-page-button" %>
 </div>
 <hr />
