--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<% page_title "Edit Settings" %>
 <div class="row">
   <div class="small-12 medium-5 large-4 columns hide-for-small">
     <%= render partial: "shared/home_nav" %>
