--- a/app/views/application/_mobile_home_links.html.erb
+++ b/app/views/application/_mobile_home_links.html.erb
@@ -14,6 +14,10 @@
 </li>
 <li class="hide-for-medium-up">
   <%= link_to "<i class='fi-burst-sale'></i> Offers".html_safe, offers_path %>
+  <ul class="dropdown">
+    <li><%= link_to_unless_current "Received", offers_path %></li>
+    <li><%= link_to_unless_current "Sent", sent_offers_path %></li>
+  </ul>
 </li>
 <li class="hide-for-medium-up">
   <%= link_to "<i class='fi-wrench'></i> Settings".html_safe, edit_user_registration_path %>
