Add conditional on fields_for

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -39,10 +39,14 @@
     <%= f.check_box :publish %>
     <%= f.label :publish, "Publish now?" %><span data-tooltip aria-haspopup="true" class="has-tip tip-right" title="Check this box if you want to publish the listing right now.<br /><br />You can always pause a listing by unchecking this box later."><i class="fi-info"></i></span>
 
-    <%= f.fields_for @image do |i| %>
-      <%= i.label :image %>
-      <%= i.file_field :image, multiple: true, name: "listing[listing_images_attributes][][image]" %>
-      <%= i.file_field :image, multiple: true, name: "listing[listing_images_attributes][][image]" %>
+    <%= label_tag "Images" %>
+    <%= f.fields_for :listing_images do |i| %>
+      <% if @listing.new_record? %>
+        <%= i.file_field :image, multiple: true, name: 'listing[listing_images][][image]' %>
+      <% else %>
+        <%= image_tag(i.object.image.thumb) %>
+        <%= i.check_box :_destroy %>
+      <% end %>
     <% end %>
     <div class="actions">
       <%= f.submit "Save Listing", :class => "button tiny" %>
