--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,10 +1,16 @@
 <% page_title @listing.headline %>
 <div class="row">
   <div class="small-12 medium-8 columns">
-    <!-- <img src="http://placehold.it/610x610&text=Thumbnail"> -->
-    <% @listing.pics.each do |pic| %>
-      <%= image_tag(pic.image) %>
-    <% end %>
+    <div class="row">
+      <img src="http://placehold.it/655x655&text=Thumbnail">
+    </div>
+    <div class="row">
+      <div class="large-block-grid-4">
+        <% @listing.pics.each do |pic| %>
+          <%= image_tag(pic.image.thumb) %>
+        <% end %>
+      </div>
+    </div>
   </div>
   <div class="small-12 medium-4 columns">
     <%= render partial: "shared/pricing_table" %>
