--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -135,6 +135,16 @@
   margin-bottom: 0;
 }
 
+.listing-pic-main {
+  margin-bottom: 20px;
+}
+
+#listing-pic-main-row {
+  img.th:hover, img.th:focus {
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
+  }
+}
+
 #notice {
   color: green;
 }
