--- a/app/views/listings/_listing.html.erb
+++ b/app/views/listings/_listing.html.erb
@@ -1,7 +1,17 @@
 <li>
-  <img src="http://placehold.it/1000x1000&text=Thumbnail">
+  <% if listing.listing_images.empty? %>
+    <img src="http://placehold.it/1000x1000&text=Thumbnail">
+  <% else %>
+    <%= image_tag(listing.marketplace_image, 'data-interchange' => "[#{asset_path(listing.main_image)}, (small)], [#{asset_path(listing.marketplace_image)}, (medium)]") %>
+  <% end %>
   <div class="panel listing-title">
     <h5><%= link_to listing.headline, listing %></h5>
-    <h6 class="subheader"><%= number_to_currency(listing.price) %></h6>
+    <h6 class="subheader">
+      <% if listing.is_offer? %>
+        Make offer
+      <% else %>
+        <%= number_to_currency(listing.price) %>
+      <% end %>
+    </h6>
   </div>
 </li>
