--- a/app/views/application/_mobile_home_links.html.erb
+++ b/app/views/application/_mobile_home_links.html.erb
@@ -12,11 +12,11 @@
     <li><%= link_to "Trash", trash_path %></li>
   </ul>
 </li>
-<li class="hide-for-medium-up">
+<li class="hide-for-medium-up has-dropdown">
   <%= link_to "<i class='fi-burst-sale'></i> Offers".html_safe, offers_path %>
   <ul class="dropdown">
-    <li><%= link_to_unless_current "Received", offers_path %></li>
-    <li><%= link_to_unless_current "Sent", sent_offers_path %></li>
+    <li><%= link_to "Received", offers_path %></li>
+    <li><%= link_to "Sent", sent_offers_path %></li>
   </ul>
 </li>
 <li class="hide-for-medium-up">
