--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -58,16 +58,16 @@
         </div>
       <% else %>
         <div class="row">
-          <div class="small-12 columns">
+          <div class="small-3 columns">
             <%= image_tag(i.object.image.thumb) %>
           </div>
-          <div class="small-12 columns">
+          <div class="small-9 columns left">
             <%= f.radio_button(:main_image_id, i.object.id) %>
             <%= label_tag "Set as display photo?" %><br />
             <%= i.check_box :_destroy %>
             <%= label_tag "Remove photo?" %>
           </div>
-        </div>
+        </div><br />
       <% end %>
     <% end %>
     <hr />
