--- a/app/assets/javascripts/marketplace.js.erb
+++ b/app/assets/javascripts/marketplace.js.erb
@@ -1,12 +1,13 @@
 $(function(){
 
   function searchFliterSort (){
+    var url = window.location.pathname + '/marketplace_ajax_sort'
     var search = $('.marketplace-search').val();
     var category = $('#listings').data('categoryId');
     var sortValue = $('#marketplace-sort-listing option:selected').val();
     var distanceValue = $('#marketplace-distance-filter option:selected').val();
     $.ajax({
-      url: 'marketplace_ajax_sort',
+      url: url,
       type: 'GET',
       dataType: 'script',
       data: {
