--- a/app/views/application/_topbar.html.erb
+++ b/app/views/application/_topbar.html.erb
@@ -1,3 +1,4 @@
+<div class="sticky">
 <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
     <li class="name">
@@ -11,3 +12,4 @@
     </ul>
   </section>
 </nav>
+</div>
