--- a/app/views/offers/_new_listing_offer.html.erb
+++ b/app/views/offers/_new_listing_offer.html.erb
@@ -1,7 +1,11 @@
-<div class="small-3 medium-2 columns message-pic">
-  <a href="#"><img src="http://placehold.it/50x50&text=[img]" /></a>
+<div class="small-3 medium-2 columns listing-thumb">
+  <% if listing.pics.empty? %>
+    <%= link_to image_tag("http://placehold.it/50x50&text=[img]", :class => "th"), listing_path(listing) %>
+  <% else %>
+    <%= link_to image_tag(listing.thumb_image, :class => "th"), listing_path(listing) %>
+  <% end %>
 </div>
-<div class="small-9 medium-10 columns message-block left">
+<div class="small-9 medium-10 columns">
   <p class="message-name"><%= listing.headline %></p>
   <div class="row">
     <div class="small-12 columns">
