--- a/app/assets/stylesheets/_home_nav.scss
+++ b/app/assets/stylesheets/_home_nav.scss
@@ -1,5 +1,8 @@
 .home-nav-box {
   padding-right: 10;
+  img.th:hover, img.th:focus {
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
+  }
 }
 
 .home-nav-pic {
